# testx

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
data/: index.htm  log.htm  main.htm  upd.htm
data/css/: radio.css
main/: CMakeLists.txt  EndpointTask.cpp  EndpointTask.h  HTTPServer.cpp  HTTPServer.h  MotorTask.cpp  MotorTask.h  RX433Task.cpp  RX433Task.h  Settings.h  SpeakerTask.cpp  SpeakerTask.h  State.h  TX433Task.cpp  TX433Task.h  hello_world_main.cpp
partition_table/: partitionTable.csv
